Update circle when form inputs are changed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </label>
             <label>
               <span>Margin</span>
-              <input type="number" name="radius" value="2" />
+              <input type="number" name="margin" value="2" />
             </label>
             <label>
               <span>Color</span>
@@ -80,9 +80,7 @@
       </div>
 
       <div id="canvas">
-        <div class="Dots-wrapper">
-          <svg class="Dots-svg"></svg>
-        </div>
+        <div class="Dots"></div>
         <button>Download SVG</button>
       </div>
     </div>
