--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
             <legend>Dots</legend>
             <label>
               <span>Amount</span>
-              <input type="number" name="amount" value="1000" />
+              <input
+                type="number"
+                name="amount"
+                value="1000"
+                min="1"
+                required
+              />
             </label>
             <label>
               <span>Radius</span>
-              <input type="number" name="radius" value="2" />
+              <input type="number" name="radius" value="2" min="1" required />
             </label>
             <label>
               <span>Margin</span>
-              <input type="number" name="margin" value="2" />
+              <input type="number" name="margin" value="2" min="0" required />
             </label>
             <label>
               <span>Color</span>
-              <input type="color" name="foreground" value="#000000" />
+              <input type="color" name="foreground" value="#000000" required />
             </label>
             <label>
               <input type="checkbox" name="preventOverlap" checked />
@@ -39,19 +45,19 @@
             <legend>Canvas</legend>
             <label>
               <span>Width</span>
-              <input type="number" name="width" value="640" />
+              <input type="number" name="width" value="640" min="1" required />
             </label>
             <label>
               <span>Height</span>
-              <input type="number" name="height" value="360" />
+              <input type="number" name="height" value="360" min="1" required />
             </label>
             <label>
               <span>Padding</span>
-              <input type="number" name="padding" value="2" />
+              <input type="number" name="padding" value="2" min="0" required />
             </label>
             <label>
               <span>Color</span>
-              <input type="color" name="background" value="#ffffff" />
+              <input type="color" name="background" value="#ffffff" required />
             </label>
             <fieldset>
               <legend>Shape</legend>
