Show warning when prevent overlap fails

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 
       <div id="canvas">
         <div class="Dots"></div>
-        <button>Download SVG</button>
+        <p class="error"></p>
+        <button class="download">Download SVG</button>
       </div>
     </div>
 
