Add support for circle shape

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <span>Rectangle</span>
               </label>
               <label>
-                <input type="radio" name="shape" value="circle" disabled />
+                <input type="radio" name="shape" value="circle" />
                 <span>Circle</span>
               </label>
             </fieldset>
@@ -88,6 +88,7 @@
       <div id="canvas">
         <div class="Dots"></div>
         <p class="error"></p>
+        <button class="redraw">Redraw</button>
         <button class="download">Download SVG</button>
       </div>
     </div>
