--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div id="canvas">
         <div class="Dots"></div>
         <p class="error"></p>
-        <button class="redraw">Redraw</button>
+        <button class="variant">Create Variant</button>
         <button class="download">Download SVG</button>
       </div>
     </div>
