--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
                 />
               </label>
               <label>
+                <span>Opacity</span>
+                <input
+                  type="range"
+                  name="foregroundOpacity"
+                  min="0"
+                  max="1"
+                  step="0.1"
+                  value="1"
+                  required
+                />
+              </label>
+              <label>
                 <input type="checkbox" name="preventOverlap" checked />
                 <span>Prevent overlap</span>
               </label>
@@ -87,6 +99,18 @@
                   type="color"
                   name="background"
                   value="#ffffff"
+                  required
+                />
+              </label>
+              <label>
+                <span>Opacity</span>
+                <input
+                  type="range"
+                  name="backgroundOpacity"
+                  min="0"
+                  max="1"
+                  step="0.1"
+                  value="1"
                   required
                 />
               </label>
