--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Random Dots Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <link rel="stylesheet" href="style/app.css" />
   <body>
