Update default colors

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <input
                       type="color"
                       name="background"
-                      value="#ffffff"
+                      value="#F8F8FF"
                       required
                     />
                   </label>
@@ -165,7 +165,7 @@
                     <input
                       type="color"
                       name="foreground"
-                      value="#dddddd"
+                      value="#E6E6FA"
                       required
                     />
                   </label>
@@ -215,7 +215,7 @@
                     <input
                       type="color"
                       name="highlightForeground"
-                      value="#0000FF"
+                      value="#FF1493"
                       required
                     />
                   </label>
