--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app">
       <main>
         <header>
-          <h1>Random Dots Generator</h1>
+          <h1>Random Dots <span>Generator</span></h1>
           <p>
             Create an image with hundreds of tiny circles (with no overlaps!)
           </p>
