Refine color input style

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                         value="#F8F8FF"
                         required
                       />
+                      <div
+                        class="color-picker"
+                        style="background: #f8f8ff"
+                      ></div>
                     </label>
                     <label>
                       <span>Opacity</span>
@@ -182,9 +186,13 @@
                       <input
                         type="color"
                         name="foreground"
-                        value="#E6E6FA"
+                        value="#B0E0E6"
                         required
                       />
+                      <div
+                        class="color-picker"
+                        style="background: #b0e0e6"
+                      ></div>
                     </label>
                     <label>
                       <span>Opacity</span>
@@ -235,6 +243,10 @@
                         value="#FF1493"
                         required
                       />
+                      <div
+                        class="color-picker"
+                        style="background: #ff1493"
+                      ></div>
                     </label>
                     <label>
                       <span>Opacity</span>
