Improve checkbox style and form accessibility

--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
                       />
                     </label>
                     <label>
-                      <input type="checkbox" name="preventOverlap" checked />
-                      <span>Prevent overlap</span>
+                      <span>Overlaps</span>
+                      <input type="checkbox" name="overlap" />
+                      <div class="switch"></div>
                     </label>
                   </div>
                 </fieldset>
