--- a/index.html
+++ b/index.html
@@ -315,64 +315,72 @@
       </main>
 
       <aside>
-        <h2>What can I do with it?</h2>
-        <p class="lead">Get inspired by these real-world use cases</p>
+        <div class="contain">
+          <h2>What can I do with it?</h2>
+          <p class="lead">Get inspired by these real-world use cases</p>
+        </div>
 
-        <ul>
-          <li>
-            <figure>
-              <a href="https://youtu.be/PWmy2KlGlrc">
-                <img src="samples/ufscar.gif" />
-              </a>
-              <figcaption>
-                <p>
-                  Slides from my talk about data visualization at Festival
-                  Comunicação Científica, organized by Meio de Cultura UFSCar.
-                  <span class="author">By <a href="#">Vinicius Sueiro</a></span>
-                </p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <a
-                href="https://www.behance.net/gallery/99114047/Population-Density"
-              >
-                <img src="samples/population.jpg" />
-              </a>
-              <figcaption>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur amet.
-                  <span class="author">
-                    By
-                    <a href="https://www.behance.net/FedericaFragapane"
-                      >Federica Fragapane</a
+        <div class="ul-wrapper contain">
+          <ul>
+            <li>
+              <figure>
+                <a href="https://youtu.be/PWmy2KlGlrc">
+                  <img src="samples/ufscar.gif" />
+                </a>
+                <figcaption>
+                  <p>
+                    Slides from my talk about data visualization at Festival
+                    Comunicação Científica, organized by Meio de Cultura UFSCar.
+                    <span class="author"
+                      >By <a href="#">Vinicius Sueiro</a></span
                     >
-                    and
-                    <a href="https://twitter.com/paolocorti_">Paolo Corti</a>
-                  </span>
-                </p>
-                <small>
-                  <em>Not</em> created using this tool. Showcased only for
-                  inspiration.
-                </small>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img src="samples/underground.png" />
-              <figcaption>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  <span class="author">By <a href="#">Lorem Ipsum</a></span>
-                </p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+                  </p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <a
+                  href="https://www.behance.net/gallery/99114047/Population-Density"
+                >
+                  <img src="samples/population.jpg" />
+                </a>
+                <figcaption>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur amet.
+                    <span class="author">
+                      By
+                      <a href="https://www.behance.net/FedericaFragapane"
+                        >Federica Fragapane</a
+                      >
+                      and
+                      <a href="https://twitter.com/paolocorti_">Paolo Corti</a>
+                    </span>
+                  </p>
+                  <small>
+                    <em>Not</em> created using this tool. Showcased only for
+                    inspiration.
+                  </small>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="samples/underground.png" />
+                <figcaption>
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    <span class="author">By <a href="#">Lorem Ipsum</a></span>
+                  </p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
 
-        <p><a href="#">Submit your project</a> to see it showcased here!</p>
+        <div class="contain">
+          <p><a href="#">Submit your project</a> to see it showcased here!</p>
+        </div>
       </aside>
 
       <footer>
