Refine button styles

--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
               </div>
               <div class="bottom-container">
                 <div class="buttons">
-                  <button class="variant">
+                  <button class="variant secondary">
                     <i data-feather="refresh-cw"></i>
                     <span>Create Variant</span>
                   </button>
-                  <button class="download">
+                  <button class="download primary">
                     <i data-feather="download"></i>
                     <span>Download</span>
                   </button>
