Add submission link

--- a/index.html
+++ b/index.html
@@ -379,7 +379,13 @@
         </div>
 
         <div class="contain">
-          <p><a href="#">Submit your project</a> to see it showcased here!</p>
+          <p>
+            <a
+              href="mailto:&#104;&#105;&#64;&#118;&#115;&#117;&#101;&#105;&#114;&#111;&#46;&#99;&#111;&#109;"
+              >Submit your project</a
+            >
+            to see it showcased here!
+          </p>
         </div>
       </aside>
 
