Add correct copy for one of the use cases

--- a/index.html
+++ b/index.html
@@ -347,7 +347,8 @@
                 </a>
                 <figcaption>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur amet.
+                    Artwork for Visual Data, the column on La Lettura, the
+                    cultural supplement of Corriere Della Sera.
                     <span class="author">
                       By
                       <a href="https://www.behance.net/FedericaFragapane"
@@ -369,7 +370,8 @@
                 <img src="samples/underground.png" />
                 <figcaption>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit,
+                    reiciendis unde eos explicabo voluptatibus earum odio eius.
                     <span class="author">By <a href="#">Lorem Ipsum</a></span>
                   </p>
                 </figcaption>
