Add warning message for small screens

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <span class="no-break">(with no overlaps!)</span>
           </p>
         </header>
+
         <div class="contain">
           <p>
             Sometimes, we just want to represent a big number as dots on the
@@ -60,6 +61,13 @@
         <section>
           <h2>Play with it</h2>
           <div id="playground">
+            <div id="mobile-warning">
+              <p><i data-feather="alert-triangle"></i></p>
+              <p>
+                Sorry! This tool ony works on bigger screens, like laptops or
+                tablets
+              </p>
+            </div>
             <div id="controls">
               <form>
                 <fieldset>
